# cuidar-plus-backend

./: .dockerignore  .env.example  .gitignore  API_EXAMPLES.md  ARCHITECTURE.md  BUSINESS_RULES.md  BUSINESS_RULES_MIGRATION.md  CORRECOESCORS.md  Dockerfile  Dockerfile.dev  Makefile  NEW_ENDPOINTS.md  QUICKSTART.md  README.md  SETUP.md  docker-compose.dev.yml  docker-compose.yml  docker.ps1  pyproject.toml  pytest.ini  requirements.txt
.Jules/: palette.md
.jules/: bolt.md  sentinel.md
docs/reports/: build_validation_2026-02-05.md
scripts/: benchmark_fk_index.py  benchmark_indexes.py  benchmark_patient_index.py  create_tables.py  init_db.py  init_db.sql
src/: config.py  main.py
src/application/: __init__.py
src/application/dtos/: __init__.py
src/application/interfaces/: __init__.py  email_service.py  sms_service.py  storage_service.py
src/application/use_cases/: __init__.py
src/domain/: __init__.py
src/domain/entities/: __init__.py  appointment.py  insurer.py  inventory_item.py  medication.py  patient.py  provider.py  report.py  user.py
src/domain/repositories/: __init__.py  appointment_repository.py  insurer_repository.py  (+6 more)
src/infrastructure/: __init__.py
src/presentation/: __init__.py
src/shared/: __init__.py
src/templates/: index.html  landing.html
tests/: conftest.py
tests/integration/: test_api_security.py  test_auth_security.py  test_create_user_security.py  test_patient_routes_security.py  test_patient_sorting.py  test_reports_performance.py  test_root_ux.py  test_user_routes_security.py
tests/unit/: test_main_routes.py
(+90 files in other folders)
